reduced spacing between news title and date, light css simplification fixed issue #26

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,21 +23,20 @@ a:hover {
 }
 
 h1 {
-    margin-top: 0px;
     font-size: 25px;
 }
 
 h2 {
-    margin-top: 0px;
+    margin-bottom: 10px;
     font-size: 21px;
 }
 
 h3 {
-    margin-top: 0px;
     font-size: 17px;
 }
 
 h1, h2, h3 {
+    margin-top: 0px;
     color: #aaaaaa;
 }
 
